--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<properties>
 		<revision>2.2.0.BUILD-SNAPSHOT</revision>
 		<main.basedir>${basedir}</main.basedir>
+		<disable.checks>true</disable.checks> <!--我是被新增的-->
 	</properties>
 	<!-- Most elements are in profiles so they are stripped out during maven-flatten -->
 	<profiles>
@@ -26,6 +27,7 @@
 			<properties>
 				<spring-javaformat.version>0.0.6</spring-javaformat.version>
 			</properties>
+
 			<build>
 				<plugins>
 					<plugin>
